<resources>
    <string name="app_name">iQueFome_Kotlin</string>
    <string name="open">Open</string>
    <string name="close">Close</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cadastro_Toolbar_Cadastro">CADASTRO</string>
    <string name="cadastro_CircleImage_EscolhaImagem">Clique para escolher uma imagem de perfil</string>
    <string name="cadastro_EditText_Nome">Nome</string>
    <string name="cadastro_EditText_Sobrenome">Sobrenome</string>
    <string name="cadastro_EditText_Email">Email</string>
    <string name="cadastro_EditText_Senha">Senha (Mínimo 6 caracteres)</string>
    <string name="cadastro_EditText_Celular">Celular</string>
    <string name="cadastro_EditText_Indicado">Indicado Por</string>
    <string name="cadastro_Button_Cadastrar">CADASTRAR</string>
    <string name="cadastro_TextView_Login">Já Possui Uma Conta? Faça o Login!</string>
    <string name="inicial_Toolbar_Menu">MENU</string>
    <string name="login_TextView_Cadastro">Não Possui Uma Conta? Registre-se Aqui!</string>
    <string name="login_TextView_RecuperarSenha">Esqueceu Sua Senha? Recupere-a Aqui!</string>
    <string name="login_Button_Login">LOGIN</string>
    <string name="login_EditText_Senha">Senha</string>
    <string name="login_EditText_Email">Email</string>
    <string name="login_ToolBar_Login">LOGIN</string>
</resources>
