<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent" android:layout_height="match_parent"
        tools:context=".view.ClienteCadastro"
        android:background="@drawable/back_default">

    <TextView
            android:id="@+id/cadastro_TextView_Cadastro"
            android:layout_width="match_parent"
            android:layout_height="56sp"
            android:paddingTop="13sp"
            android:text="@string/cadastro_Toolbar_Cadastro"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/text_color"/>

    <View
            android:layout_width="250sp"
            android:layout_height="4sp"
            android:layout_marginTop="5sp"
            android:layout_centerHorizontal="true"
            android:background="@color/text_color"
            android:layout_below="@+id/cadastro_Toolbar"/>

    <include
            android:id="@+id/cadastro_Toolbar"
            layout="@layout/layout_toolbar"/>

    <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/cadastro_CircleImage_ProfileImage"
            android:layout_width="80sp"
            android:layout_height="80sp"
            android:layout_marginTop="30sp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/cadastro_TextView_Cadastro"
            android:tooltipText="@string/cadastro_CircleImage_EscolhaImagem"
            android:src="@drawable/icon_camera2"
            app:civ_border_width="2sp"/>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/cadastro_CircleImage_ProfileImage"
            android:layout_marginTop="15sp">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/cadastro_Textfild_Nome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:layout_marginLeft="30sp"
                    android:layout_marginRight="30sp"
                    app:errorEnabled="true">

                <EditText
                        android:id="@+id/cadastro_EditText_Nome"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/cadastro_EditText_Nome"
                        android:textColor="@color/text_color"
                        android:inputType="text"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/cadastro_Textfild_Sobrenome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:layout_marginLeft="30sp"
                    android:layout_marginRight="30sp"
                    app:errorEnabled="true">

                <EditText
                        android:id="@+id/cadastro_EditText_Sobrenome"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/cadastro_EditText_Sobrenome"
                        android:textColor="@color/text_color"
                        android:inputType="text"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/cadastro_Textfild_Email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:layout_marginLeft="30sp"
                    android:layout_marginRight="30sp"
                    app:errorEnabled="true">

                <EditText
                        android:id="@+id/cadastro_EditText_Email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/cadastro_EditText_Email"
                        android:textColor="@color/text_color"
                        android:inputType="textEmailAddress"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/cadastro_Textfild_Password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:layout_marginLeft="30sp"
                    android:layout_marginRight="30sp"
                    app:errorEnabled="true"
                    app:counterEnabled="true"
                    app:counterMaxLength="6"
                    app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/cadastro_EditText_Password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/cadastro_EditText_Senha"
                        android:textColor="@color/text_color"
                        android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/cadastro_Textfild_Celular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:layout_marginLeft="30sp"
                    android:layout_marginRight="30sp"
                    app:errorEnabled="true"
                    app:counterEnabled="true"
                    app:counterMaxLength="11">

                <EditText
                        android:id="@+id/cadastro_EditText_Celular"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/cadastro_EditText_Celular"
                        android:textColor="@color/text_color"
                        android:inputType="number"
                        android:maxLength="11"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/cadastro_Textfild_Indicado"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:layout_marginLeft="30sp"
                    android:layout_marginRight="30sp"
                    app:errorEnabled="true">

                <EditText
                        android:id="@+id/cadastro_EditText_Indicado"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/cadastro_EditText_Indicado"
                        android:textColor="@color/text_color"
                        android:inputType="number"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                    android:id="@+id/cadastro_Button_Cadastrar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50sp"
                    android:layout_marginLeft="30sp"
                    android:layout_marginRight="30sp"
                    android:text="@string/cadastro_Button_Cadastrar"
                    android:textStyle="bold"
                    android:textColor="@color/text_color"
                    android:background="@drawable/round_button"/>

            <TextView
                    android:id="@+id/cadastro_TextView_Login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20sp"
                    android:layout_marginBottom="15sp"
                    android:text="@string/cadastro_TextView_Login"
                    android:textColor="@color/text_color"
                    android:textAlignment="center"/>

        </LinearLayout>

    </ScrollView>

    <ProgressBar
            android:id="@+id/cadastro_ProgressBar"
            android:layout_width="70sp"
            android:layout_height="70sp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:visibility="gone"/>

</RelativeLayout>